# R-mische-Zahlen

./: CMakeLists.txt
CMakeProject1/: CMakeLists.txt  main.cpp
